# Senegal

./: .gitignore  CITIZEN_CODE_OF_CONDUCT.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.py  senegal.make
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  dart.yml  deploy.yml  linux_tests.yml  mac_tests.yml  tests.yml
core/: sapi.c  sboolCore.c  sboolcore.c  scorocore.c  scorolib.c  sfilelib.c  siolib.c  slistCore.c  slistcore.c  smapCore.c  smapcore.c  smathlib.c  snumCore.c  snumcore.c  ssocketlib.c  sstringCore.c  sstringcore.c
core/includes/: sapi.h  sboolcore.h  scorocore.h  scorolib.h  sfilelib.h  slistCore.h  slistcore.h  smapcore.h  snumcore.h  ssocketlib.h  sstringcore.h
core/math/: math.sgl
docs/: .firebaserc  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js  sidebarsCommunity.js
docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.js  globalData.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
docs/.firebase/: hosting.YnVpbGQ.cache
docs/community/: support.md
docs/docs/: cimport.md  concurrency.md  enhance.md  keywords.md  operators.md  overview.md  pipeline.md  tour.md
docs/src/: sw.js
libs/: scorolib.c  sdebuglib.c  sfilelib.c  siolib.c  smathlib.c  ssocketlib.c
libs/includes/: scorolib.h  sdebuglib.h  siolib.h  smathlib.h
libs/list/: list.sgl
libs/test/: test.sgl
src/: main.c  sapi.c  sboolCore.c  scompiler.c  sconstant.c  sconstant_utils.c  scorolib.c  sdebug.c  sfiblib.c  sfilelib.c  sgcobject_utils.c  shttplib.c  sinstruction_utils.c  sinstructions.c  siolib.c  slexer.c  slistCore.c  sloadclib.c  smapCore.c  smathlib.c  smemory.c  snumCore.c  sparser.c  ssocket.c  sstringCore.c  stable.c  stable_utils.c  sutils.c  svm.c  swsocket.c
src/core/: sboolCore.c  sboolCore.h  smapCore.c  smapCore.h  snumCore.c  snumCore.h  sstringCore.c  sstringCore.h
src/includes/: sapi.h  sboolCore.h  scompiler.h  sconstant.h  sconstant_utils.h  scorolib.h  sdebug.h  sfiblib.h  sfilelib.h  sgcobject.h  sgcobject_utils.h  shttplib.h  sinstruction_utils.h  sinstructions.h  siolib.h  slexer.h  slistCore.h  sloadclib.h  smapCore.h  smathlib.h  smemory.h  snumCore.h  sopcodes.h  sparser.h  srules.h  ssocket.h  sstringCore.h  stable.h  stable_utils.h  sutils.h  svm.h  swsocket.h
test/: pubspec.yaml  senegal
test/test/: senegal_test.dart
(+111 files in other folders)
